--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "build": "npm run clean && tsc && chmod 755 build/index.js",
     "dev": "tsc --watch",
+    "start": "node build/index.js --http",
     "start:stdio": "node build/index.js",
     "start:http": "node build/index.js --http",
     "start:sse": "node build/index.js --sse",
